<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/notASingleTonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_a_singleton" />

    <Button
        android:id="@+id/singletonWithoutComponentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singleton_without_using_singletoncomponent" />

    <Button
        android:id="@+id/singletonCompWithoutSingletonAnnotationId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singletoncomponent_without_singleton_annotation" />

    <Button
        android:id="@+id/singletonCompWithSingletonAnnotationId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singletoncomponent_with_singleton_annotation" />

    <Button
        android:id="@+id/actScopedWithActivityAnnotationId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_component_with_activity_scoped_annotation" />

</LinearLayout>