<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    android:gravity="center"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/hiltId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_hilt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/daggerId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_dagger" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/koinId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/koin" />

</androidx.appcompat.widget.LinearLayoutCompat>